--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -374,7 +374,7 @@ nav {
   font-size: 1rem;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s;
+  transition: 0.3s;
 }
 
 .modal button:hover {
